FIX: alignment of footer section and image interaction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,12 +606,12 @@ footer p {
 /* Experience alignment pages - Narrow Middle */
 
 .left-align-experience {
-    padding: 30px 0 0 20px;
+    padding-left: 20px;
     width: 45%;
     height: auto;
     float: left;
     text-align: center;
-    background-color: greenyellow;
+    /* background-color: greenyellow; */
     /* position: absolute; */
     /* top: 0; */
 }
@@ -625,6 +625,7 @@ footer p {
 }
 
 .left-align-experience img {
+    padding-top: 2.5%;
     width: 75%;
     height: auto;
     /* position: relative; */
@@ -639,37 +640,48 @@ footer p {
     font-size: 90%;
 }
 
+.indent-experience {
+    padding-left: 12.5%;
+    position: relative;
+}
+
 .right-align-experience {
     padding-top: 30px;
+    padding-bottom: 30px;
     width: 25%;
-    height: 600px;
+    height: auto;
+    /* margin: 0 auto; */
     float: right;
     text-align: center;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
+
+    /* border-left: 1px solid rgba(58,58,58, 0.3); */
+    position: relative;
+    /* margin-left: 75%; */
+    top: 50%;
+    /* margin: 75px 0px 0px; */
 }
 
 .right-align-experience img {
     width: 75%;
     height: auto;
+    padding-bottom: 50px;
 }
 
 .center-align-experience {
     padding-top: 30px;
     padding-bottom: 30px;
     width: 25%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     text-align: center;
     /* background-color: blueviolet; */
 
     /* Vertical line  */
-    border-left: 1px solid rgba(58,58,58, 0.3);
-    /* height: 300px; */
+    /* border-left: 1px solid rgba(58,58,58, 0.3); */
     position: relative;
-    /* left: 50%; */
     margin-left: 50%;
     top: 50%;
-    /* padding: 25% 0; */
-    margin: 75px 50% 0px;
+    /* margin: 75px 50% 0px; */
 }
 
 .center-align-experience img {
@@ -679,10 +691,10 @@ footer p {
 }
 
 .bottom-align-experience {
-    padding-top: 30px;
+    padding: 50px;
     width: 100%;
     height: auto;
-    background-color: #F2DDB2;
+    /* background-color: #F2DDB2; */
 }
 
 /* Standard alignment pages - Wide Middle */
